--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -1,6 +1,7 @@
 ## 2-5F
 
 - MP
+- 2LK, LP
 - 前投げ
 - バクステ, {通常投げ}, 2MP: シミー
 - ガード: 様子見
@@ -73,10 +74,6 @@
     - ガード
 
 ステップ, 中ショットが重なりやすいけど、有利すぎると重ならないし、後方受け身にも完全には重ならない。
-
-## 4HP, 強ニー, 弱アッパー: 34
-
-- DR 6MP(+2): 中央では少し遠めだが2MPが繋がる、端では4HPが繋がる。
 
 ## 6HK(g): 4
 
@@ -161,7 +158,8 @@ MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離
 その他:
 
 - 強ニー: 立っていると-5、しゃがんでいると+4
-- 中ネクサス(+2)(g), SA: -3からぶっぱ、サガットを知ってる人用
+- 中ネクサス(+2): ヒットで+4、ガードは-3で投げ間合いの外
+  - {ガード}, SA: -3からぶっぱ、サガットを知ってる人用
 - 弱ニー(+8): ガードで五分、リターンがイマイチ
 
 MPからのガードは立ち→しゃがみのファジーにするとジュリの中足・大足の組み合わせもガードできる。ただ、タイミングが難しい。
@@ -204,14 +202,29 @@ MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
 
 ## 弱アッパー(+2): 34
 
-- {端} 2MP: +8
-  - MP(+3)
-  - 後退: シミー
-- {端} LP, 中ショット(+1): ヒットでもガードでも+4
-  - 後退: シミー
-- {端} 2LP, 中ショット(+4): ヒットでもガードでも+7
-  - MP: 連続ガード
-  - 後退: シミー
+- DR 6MP(+2): 後方受け身には2MP、その場受け身や端では4HPが入る、ガードでも+4
+  - {後方受け身}
+    - {ヒット}, 2MP, ...
+    - {ガード}
+      - 2MP
+  - {その場受け身/端}
+    - {ヒット}, 4HP, ...
+    - {ガード}
+      - 2MP
+      - 前進(2F), 前投げ
+- {端}
+  - 2MP: +8
+    - MP(+3)
+    - 後退: シミー
+  - 2LK, 2LP: +2
+  - 2LP, 中ショット(+4): ヒットでもガードでも+7
+    - MP: 連続ガード
+    - 後退: シミー
+  - 強ネクサス
+    - {ヒット}, 2MP
+    - {ガード}: 五分
+      - 2LP 2回: 五分の攻め
+      - ノヴァ: 4F技と相打ちで吹き飛ばしで4HPや6HKが入る、入れ込んでもいい
 
 4HP, 強ニー, 弱アッパーなどで頻出する。MP(+3)からループするので持続重ねが本命。
 
@@ -241,12 +254,16 @@ MP, MP, LPなど遠目で当たると(+1)になる。
 - DR 6LK
 - DR 6MP: 5F遅れ
 - DR 投げ
-- {端} (中アッパーと同じ)
 - ステップ: +4で投げ間合いの外、端やその場受け身にはド密着
-  - 2MP, 中ネクサス: とりあえず触って読み合い
+  - MP, 2MP: 削り
+    - 中ニー: 立ちガードされても-3
+    - 中ネクサス
   - ガード
+- {端} 中アッパーと同じ
 
 中アッパーよりも近くに落ちて、後方受け身にもラッシュ投げが届く。
+
+ノーゲージの攻めも悪くないので、強アッパーに行けるなら強アッパーでいい。
 
 ## 強アッパー-h: 23
 
@@ -375,6 +392,8 @@ DIがギリギリ届かない。
 発生は遅いが、マイトをガードしてグリードに潰されないタイミングなら弱攻撃しか押せない。
 弱/中ネクサスからはノヴァが繋がらないが、無敵技以外で割り込めないのでダブルアップを狙うのもあり。ガードされても後退がシミーになる投げ間合いで+2だし。
 
+ネクサスがカウンターヒットすると吹き飛んでノヴァが入るので、できるだけ溜めて派生技を選択する。
+
 ## 弱/中ネクサス(g): -5
 
 - マイト: 暴れ潰し
@@ -459,23 +478,37 @@ SA2-2やSA3も状況がいい。
 
 補正40%なら180ダメージ減って、起き攻めできるようになる。リーサル以外ではこの派生にした方がいい。
 
-- 前進, 投げ
+- 前進
+  - MP, LP: 完全には密着できない
+  - 投げ
+  - 後退: シミー
+- 6MP: 中段
+- 6LK(+2): 下段、ヒットでLPが入る
+- DR 2MK: 下段、ヒットで4HPが入る、ガードで+2の後退がシミーになる投げ間合い
+- DR MP(+3): ヒットで4HP/6HKが入る、ガードで+9
+- 前J.LK: 対空しにくいめくり
 
 ## SA3: 15
 
 - 6HK: しゃがみ攻撃を出さないとガードでも+4で2MPが届く、相手が後退してないか
-  - {ヒット} 2MP, 強昇竜/強ニー
-  - {端} MP(+3): 距離で持続当てになる、中央でも相手が後退しないなら当たる
-    - 2MP, 弱ショット: ガードされても-5で中足の外、削り1.6本
-  - {ガード}, 2MP, 中ネクサス
+  - {ヒット}, 2MP, ...
+  - {ガード}: +4
+    - 2MP, 中ネクサス
+    - 後退
 - 6LK: 下段、ガードされると-3で投げ間合いの外
+
+その他:
+
 - 弱ニー: 立ちガードでも五分で投げ間合いの外
 - 中ショット: ガード後に強ショットをジャンプできない、しゃがみに当たらない
 - 弱ショット: 判定が前に出て無敵技に当たりやすい
 - DR MP: ヒットで4HPが入る、密着できない
-  - {ガード}, MP: 連続ガード
-    - 2MP, 弱ショット: -6で中足の間合い
-    - 2MP, 中ネクサス
+  - {ヒット}, 4HP, ...
+  - {ガード}: +6
+    - MP: 連続ガード
+      - 2MP: 5F遅れだが、4F技でも相打ち
+        - 中ネクサス: 読み合い
+        - 弱ショット: -6で中足の間合い
 - DR 2MK: 5F遅れ、ヒットで4HPが入る、密着できない
 
 ガードで大足の外。
