--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -83,10 +83,19 @@ MP, MPに無敵技以外で割り込めない。
 
 基本的には密着したほうがいいけど、差し合いで遠目から強ネクサスで止まるパターンとの択でもいい。
 
-## {端} 中ショット(+1): 16-23
+## 6HK: 15-18
+
+起き上がりに重ねる。
+相手がしゃがみ攻撃を最速で出すと負ける。
+
+ヒットで+7、ガードで+4。
+
+## 中ショット: 15-23
+
+起き上がりに重ねる。
+相手がしゃがみ攻撃を最速で出すと負ける。
 
 持続当てになる。ヒットでもガードでも同じ硬直。
-相手がしゃがみ攻撃を最速で出すと負ける。
 
 (+1)なら2LPまでだが、(+3)からはMP, LPが入るし、(+5)からは4HPが入る。
 
