--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -454,7 +454,7 @@ SA2-2やSA3も状況がいい。
 
 中央でもゲージを使うなら強アッパー締めが強い。
 
-## ノヴァ, 強アッパー: 28
+## ノヴァ, 強アッパー(+1): 28
 
 - DR 6LK: 下段
 - DR 6MP: 4F遅れ、中段
@@ -463,9 +463,15 @@ SA2-2やSA3も状況がいい。
 
 ## ノヴァ(g): 2
 
+- MP, LP, 中アッパー(+1)
+- 前投げ
+- 後退: シミー
+
 後退がシミーになる投げ間合い。
 
 弱/中ネクサスヒットからガードさせてもいい。
+
+MP, MPは届かない。
 
 ## SA1: 22
 
