--- a/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
@@ -13,3 +13,11 @@ OD上弾を重ねるとODスクトゥムも割れる。
 ## JP
 
 HPやMPに対して2MPやLKが差し返しやすい。
+
+## キンバリー
+
+キンバリーの6HKはガードでいい。
+ガードしてからMPが基本。表裏に対してノーキャンセル中アッパーで追撃でき、着地には+3からMPをガードさせられる。後退でも-2でノーリスクだし、確認にも余裕がある。
+表裏と着地に対しては2MPでもいい。表裏には2MP, 強ノヴァが入る。ラッシュ肘で3000ダメージ。
+MPと2MPは裏の場合でも表に落ちるので、追撃も表の入力でいい。
+また、後退と表にはHKが確定。後退にはHK, 強ニー、表にはHK, 強ノヴァ, 6HK, 中アッパーが入る。見てから判別するのは難しいが、強ニーは空振りでも+7、強ネクサスは+12なのでチャレンジしていい。判別できたら一番いい。基本的に後退狙いなので、入れ込むならニーの方。
