--- a/shared/art/expression/表現.md
+++ b/shared/art/expression/表現.md
@@ -41,3 +41,5 @@ expression もその一部ではある。
 表現が先で、技術が後。
 
 同じ技術や素材を使っても表現によって印象が変わる。
+
+目の前にある同じ事象を歌詞にするだけでもさまざまな切り取り方、捉え方がある。表現の前に、切り取り方がつまらないとつまらない表現になる。まず視点、観点を面白くする。
