--- a/shared/computer/software/programming/code/コーディング.md
+++ b/shared/computer/software/programming/code/コーディング.md
@@ -86,3 +86,6 @@ https://speakerdeck.com/munetoshi/code-readability?slide=165
 
 結局、コーディングが人でも機械でも、上流でテストできてなくて品質が低いのは変わらない。
 コードを生成できても、SIerが下請けにコーディングを発注していた状況と変わらない。下請けをAIに置き換えられるかもしれないけど、テストができていないとリリースできない。
+
+コーディングはその言語らしく書いた方が最適化できる。
+関数型言語でないのに関数型っぽく書いても限界がある。処理が遅くなることもある。
