--- a/shared/entertainment/humor/ユーモア.md
+++ b/shared/entertainment/humor/ユーモア.md
@@ -219,3 +219,11 @@
 相手を笑わせることがユーモアの目的ではない。
 
 「粋」や「ユーモア」とは恐怖を払うこと。
+
+表現のおかしさは自分が見た印象のおかしさと表裏一体。
+
+表現もユーモアは印象の反対を目指す。ただ、表現のおかしさは瞬発力も大事。
+
+視点のおかしさは「どこ見てんねん」と思われるくらいを目指す。
+
+面白さやユーモアというものは個性から生まれる。他の人と同じだと面白くない。
