--- a/shared/life/生.md
+++ b/shared/life/生.md
@@ -132,3 +132,7 @@ https://www.youtube.com/shorts/Tieiz38zcIA
 自分自身と誰かの価値のどちらが重いか比べないといけない時がある。
 
 誰かの命を重視するということは、自分の命を軽視するということでもある。
+
+死なないことが生きることではないが、決まった生き方があるわけでもない。
+
+見たことがないものを見るのが生きるってことかも。
