--- a/shared/perception/認知.md
+++ b/shared/perception/認知.md
@@ -66,3 +66,5 @@ https://redkiwiapp.com/ja/english-guide/synonyms/impression-perception
 刺激を捉えること。
 
 感情もまた手放せない。後から感情に気づいて、理解するのが大事。
+
+「それ以外が全て見えているのであれば最早それは見えているも同義である！！」『呪術廻戦』
