--- a/shared/success/trial/試行.md
+++ b/shared/success/trial/試行.md
@@ -34,3 +34,6 @@ riskやtimeはtrialの文脈かも。
 うまくいきそうにないことでも、コストが低かったら一応試しておくのはアリ。自分の評価が間違っていることもある。
 
 試行回数が0と1の間には大きな隔たりがある。
+
+一度失敗するまでは雑でもいい。
+失敗したら丁寧にやり直して、それでもダメなら方法を変える。
