--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -142,3 +142,8 @@ Lose-WinをLose-Loseに持ち込む。
 「戦う覚悟なんて…そんなもん手に入れなくていいんだよ、本当は。でも、しょうがなく、手に入れちまうんだ。戦わないと、守れないものがあるから、僕達は守るために戦うんだ。」『廻天のアルバス』
 
 命を守るためには戦うときもある。戦いの準備を欠かせば命を失う。
+
+相手がまた挑んでくるようなら喧嘩に勝ったとは言えない。
+
+「喧嘩はするもんじゃねえ、止めるもんだ。」
+「誰かの喧嘩を止めれば褒めてもらえるぞ。オマケに最低でも二人殴れる。」『呪術廻戦』
