--- a/games/shogi/将棋.md
+++ b/games/shogi/将棋.md
@@ -15,3 +15,6 @@ AIの将棋はもはや薄い囲いから先に入玉してそのまま押しつ
 女性の棋士がいないというか、女性が将棋で弱いのは母数が少ないから。格ゲーもそうだった。
 
 将棋の解説で「これも一局の将棋」と言ったときは「ほぼ互角」ということ。
+
+将棋では駒がぶつかり始めてからを「中盤」と呼ぶ。
+「終盤」には明確な境界がないけど、だいたいどちらかに天秤が傾いて終局が見えてきたあたり。
