--- a/shared/art/創造性.md
+++ b/shared/art/創造性.md
@@ -53,3 +53,5 @@ creative は 0→1、productive は 1→100 が対象。
 一長一短だけど、普通は知っている方が役に立つことは多い。あと時間の面で言うとあらゆる作品を知ることはできないので、知識よりも技術面の向上に時間を使うのも重要ではある。
 
 創造性とは卓越性でもある。
+
+どれだけ手を尽くしても、混沌から生まれるものは秩序の中で生まれ得ない。
