--- a/shared/culture/伝統.md
+++ b/shared/culture/伝統.md
@@ -1,6 +1,6 @@
 # 伝統 Tradition
 
-古くから残ってきた文化。
+古くから残ってきた文化。既存の文化。
 
 歴史があるということは、単に「ベタ」ということだ。
 
@@ -11,3 +11,5 @@
 良いものだから続けられるべきで、害になったら捨てるべきだ。
 
 新しく生まれた文化をその時限りの「流行」として終わらせるのか、長く続く「伝統」として残すのかは、その組織にとって重要な判断になる。雑に全てを流行として終わらせていいわけではない。上司は常に広く見て、残すべき文化が生まれたら保護しないといけない。
+
+伝統や古いものが必ずしも悪いものとは言えないが、古くて「ダサい」ものは長続きしない。
