--- a/shared/society/tips/養う.md
+++ b/shared/society/tips/養う.md
@@ -1,2 +1,4 @@
 「養う」という行為は、「生かす」だけでは足りない。「育てる」ところまで含んでの「養う」という行為だ。
 それ以上育たないなら育ち切ったところで食べたほうがいい。ただ、卵を生むようなタイプは生かしておく価値がある。
+
+弱者を生かしたところですぐ死ぬ。重要なのは、弱者を強者に育てることであって、その場しのぎの対症療法では足りない。ただ、育つまで養う必要はある。
