--- a/shared/time/時間.md
+++ b/shared/time/時間.md
@@ -37,3 +37,5 @@ timeとluckは統合してもいいのかも。
 コストが低くてもリスクが大きすぎると試行回数が少なくなってしまうことがある。
 
 機会を資源として捉えた概念が時間。
+
+「アキレスと亀」が現実に起こらないのは、距離と同時に時間も無限長になって実質止まっているから。時間が止まることはないので、距離は縮まって、いずれ亀はアキレスに抜かれる。
