--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
@@ -64,3 +64,8 @@ BO中は特にOD上ショットを削りで使っていくのが大事。
 歩きが遅いのでシミーしづらい。ただ、後退がシミーになる状況を作るパターンもわりとある。ド密着から下がるというよりは、少し離れた位置からシミーと投げを狙う。
 
 シミーは2MPが無難。バクステからも届く。ODネクかTC。ラッシュも楽ではある。余裕があれば2HP強ネク。
+
+## メモ
+
+翔サガットは中央だとネクサス当たってもノヴァガードさせてる。
+ただ、わざわざノヴァに当たるタイミングで暴れる人はまずいないので、別にグリードとマイトでいい気もする。投げと後退の択があるのが強みか。
