--- a/games/Street-Fighter/Six/theory/守りの選択肢.md
+++ b/games/Street-Fighter/Six/theory/守りの選択肢.md
@@ -5,37 +5,7 @@
 
 守りの時はひたすらガードしてインパクトだけ見てもいいかも。
 
-## 無敵技暴れ
-
-起き上がりに最速の無敵技で切り返す。
-
-- ガード以外の行動に割り込む
-- ガードされると大きな確反がある
-- インパクトやアーマーに負ける場合がある
-
-キャラによっては垂直跳びやバクステ、一部の技に当たらないこともある。
-インパクトに負ける場合もある。
-
-完全無敵技を持っていれば、どれだけ制限されても出せる手がある。
-
-スト6ではゲージがないと無敵もないので、無敵技とジャンプの二択だけではゲージが足りないことも多い。
-
-## ジャンプ入れっぱ（相手から離れる方向）
-
-相手の投げや様子見から離れられる。
-中央ではバックジャンプ、端では前ジャンプ。
-
-- 打撃に当たる
-- 投げや後退から離れる
-
-相手にリスクはないが、投げとシミーの択に強いし、小技で固められるくらいならこちらのリスクも小さい。
-
-シミーと投げの二択には単にバックジャンプすればいい。
-
-当て投げも考えると、ある程度長く入れっぱにしておいた方が効果的。良し悪しはあるけど。
-相手も小技の単発確認から当て投げは入れ込まないと厳しいので、当たっていても投げてくる。
-
-## ガードして切り返し
+## ガード
 
 相手の打撃をガードして、有利になったり相手が後退したりしたのを見てから切り返す。
 
@@ -55,6 +25,44 @@
 特にシミーを見てから割り込むのと小技に割り込むのが難しい。
 
 攻め側の有利フレームが少ない状況では、バクステにしっかり差し込むのが大事。
+
+- 相手が離れるのを待つ
+- フレーム有利を待って割り込む
+- 発生の遅い技に割り込む
+
+ガードでフレーム有利を待って割り込むのと、発生の遅い技に割り込むのが守りの基本。ただ、反射神経が悪いとどちらも厳しい。どこかで割り切って無敵技で暴れるか、ジャンプで暴れるしかない。投げ抜けはしない。
+
+## ジャンプ入れっぱ
+
+相手の投げや様子見から離れられる。
+中央ではバックジャンプ、端では前ジャンプ。
+
+- 打撃に当たる
+- 投げや後退から離れる
+
+相手にリスクはないが、投げとシミーの択に強いし、小技で固められるくらいならこちらのリスクも小さい。
+
+シミーと投げの二択には単にバックジャンプすればいい。
+
+当て投げも考えると、ある程度長く入れっぱにしておいた方が効果的。良し悪しはあるけど。
+相手も小技の単発確認から当て投げは入れ込まないと厳しいので、当たっていても投げてくる。
+
+コマ投げに対しては投げ抜けできないので、垂直ジャンプで最大リターンを狙うのが基本。
+
+## 無敵技暴れ
+
+起き上がりに最速の無敵技で切り返す。
+
+- ガード以外の行動に割り込む
+- ガードされると大きな確反がある
+- インパクトやアーマーに負ける場合がある
+
+キャラによっては垂直跳びやバクステ、一部の技に当たらないこともある。
+インパクトに負ける場合もある。
+
+完全無敵技を持っていれば、どれだけ制限されても出せる手がある。
+
+スト6ではゲージがないと無敵もないので、無敵技とジャンプの二択だけではゲージが足りないことも多い。
 
 ## 最速小パン
 
