--- a/shared/government/国家.md
+++ b/shared/government/国家.md
@@ -3,3 +3,9 @@
 国はすべての国民を生かさないと、国の意味がない。
 
 国家や政府は国民のためにあって、それ以上でも以下でもない。国民以外のために活動するなら倒さなければならない。
+
+国家は根本的に卑しい盗人である。
+
+政府というのは国民から奪った権利を集約することで治安を保つもので、政府が治安を保てないなら国民に権利を返さないといけない。
+行政が国民の生活を助けないなら、国民は他人から物を奪って生活していい。
+警察が犯罪を咎めないなら、国民は犯人を殺していい。
