--- a/shared/war/戦争.md
+++ b/shared/war/戦争.md
@@ -147,3 +147,5 @@ Lose-WinをLose-Loseに持ち込む。
 
 「喧嘩はするもんじゃねえ、止めるもんだ。」
 「誰かの喧嘩を止めれば褒めてもらえるぞ。オマケに最低でも二人殴れる。」『呪術廻戦』
+
+負けたら死ぬ戦いでは、死なないために死ぬほど準備しておかないといけない。
