--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -38,3 +38,6 @@ https://youtube.com/watch?v=KnTSHJEhbcM&si=q-w-PxBGzsnXEWDB
 https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
 
 音楽ってリズムしか要らないのかもしれない。メロディやハーモニーは音の要素であって音楽の要素ではないのかも。
+
+芸術家は「目より先に手が肥えることはない」という。
+同様に音楽家も「耳より先に声が肥えることはない」と考えるべき。
