--- a/study/politics/正義.md
+++ b/study/politics/正義.md
@@ -23,3 +23,5 @@
 権力を背景に行動したら正義ではない。
 
 許せないと思ってしまうと、見過ごすことができない。それが正義。正義の心を持たない者は目の前の暴力を許容する。
+
+暴力を承認する人間には正義がない。悪人への優しさは単に自分だけが暴力から逃げるための無関心でしかない。
