--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -228,6 +228,14 @@ MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
 
 4HP, 強ニー, 弱アッパーなどで頻出する。MP(+3)からループするので持続重ねが本命。
 
+## 弱アッパー(+5): 37
+
+- 2LP: +22
+- 2MK: +8
+- MK: +4
+
+コンボで高め弱アッパーの後とか。対空の後だと安定しない。
+
 ## 中アッパー: 27
 
 - DR 6LK
