--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -137,3 +137,5 @@
 ネクサスの入れ込みが結構短くて難しいところ。中パン先端から届かないこともある。ネクサスをガードさせること自体は強い。
 
 ジャストパリィからでもHK(pc)から強アッパー-hで1700減る。
+
+サガットの立ち回りはプロもみんなステローが強くて弾が弱いって言ってる。特に弱ショットは弱すぎる。
