--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -177,3 +177,5 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 攻めを切るためにはまず相手の攻めを凌いで、崩されないように耐えないといけない。一瞬の有利を見極めて割り込むのが基本。良い守りには反射神経が必要。
 
 守りに回っても簡単に崩されないなら、相手に攻められても無理しなくていい。ただ、反射神経が悪いとある程度割り切ってこちらのペースに持っていくしかない。読みで対処する。
+
+スト6は発生が遅くてガード後の状況がいい技にはジャストパリィやインパクトを合わせるのが基本。
