--- a/shared/family/children/育児.md
+++ b/shared/family/children/育児.md
@@ -67,3 +67,5 @@ https://toyokeizai.net/articles/-/624086?page=2
 子どもが言葉で自己主張できるようになったら、泣き喚いたりする見苦しいコミュニケーションは無視しないといけない。
 
 人間も3-4歳になると犬猫くらいの知能になるので、ようやく本格的な躾が始められる。
+
+子育てはまず子供を優先する余裕の有無で方法も違う。子供を優先する余裕があるなら、楽しんでいることや続けていることはとことん続けさせて、親はそれを待ったほうがいい。集中力はあらゆる活動の基礎になる。
