--- a/shared/respect/尊重.md
+++ b/shared/respect/尊重.md
@@ -353,3 +353,5 @@ https://x.com/ggnka_icha/status/1810274912759918858
 
 今すぐに手に入らなかったとしても、良いものは良いと思った方がいい。
 「すっぱいぶどう」にはしない。
+
+敬うからといって大事するとは限らない。警戒もまた敬うことだ。
