--- a/shared/training/routine/習慣.md
+++ b/shared/training/routine/習慣.md
@@ -76,3 +76,6 @@ Practice
 きっかけ、行動、報酬、の3つの要素でできている。
 
 「進行感」は、「それを続けないと、損した気持ちになる」こと。止めると気持ち悪い、習慣的な感覚。達成感と対応するような造語かも。ノリ。
+
+ランニングなんかは朝まったりして「よし、行くか」と重い腰を上げるようでは続かない。習慣になってない。
+起きてから流れ作業でモーニングルーティンや準備を済ませて、考える暇もなく出かけるくらいでないといけない。
