--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -267,9 +267,12 @@ MP, MP, LPなど遠目で当たると(+1)になる。
     - 中ニー: 立ちガードされても-3
     - 中ネクサス
   - ガード
+- 中ニー(+10): ガードされても+3で投げ間合いの外
 - {端} 中アッパーと同じ
 
 中アッパーよりも近くに落ちて、後方受け身にもラッシュ投げが届く。
+
+ステップはMP, LPがヒットしていても届かないので、MPルートは削り用。カウンターなら繋がる。
 
 ノーゲージの攻めも悪くないので、強アッパーに行けるなら強アッパーでいい。
 
@@ -328,6 +331,10 @@ DIがギリギリ届かない。
 上りで当たるとしゃがんでいても-7なので注意。
 
 ## 中ニー(+10)(g): 3
+
+- MP
+  - {ヒット}, LP, 中アッパー(+2)
+  - {ガード}, 2MP: 削り
 
 投げ間合いの外。
 
