--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -64,6 +64,7 @@
 
 ## 差し込みの選択肢
 
+- 2MK
 - **2HP**
   - 弱ショット: 先端ならガードされても連続ガードの-5くらいで大足の外、インパクトを返しやすい
   - 中ニー: 先端なら立ちガードされても-2の投げ間合い、しゃがみなら+2で投げ間合い
@@ -85,6 +86,8 @@
 
 弱ニーは使いたくなるけど、不利になりやすいので中ニーの距離まで我慢。弱ニーを狙うならどちらかというとHPと6LK、あとはDR MPやDR 2LPが強い。
 そもそも弱ニーと中ニーで有利を取れる距離があまり変わらないし、弱ニーは届かないと空振りになるし、近すぎると不利になりやすい。中ニーでいい。
+
+6LKは不利が大きいし発生も遅いので、2MKでいいところは2MKにするのが無難。
 
 ## 牽制の選択肢
 
