--- a/shared/finance/財務.md
+++ b/shared/finance/財務.md
@@ -54,3 +54,5 @@ business だけでなく、community でも finance は必要。
 利益はビジネスで考えることではないけど、相手に良い影響を与えることでビジネスに価値が生まれて、対価が支払われることがある。
 
 利益を追求するための経済活動。
+
+貯金があっても、収入が安定しないと財政的に不安。
