--- a/shared/music/vocal/training/tips/キーを変えて歌う.md
+++ b/shared/music/vocal/training/tips/キーを変えて歌う.md
@@ -72,3 +72,5 @@ https://note.com/atano/n/n3c01c44d8bae
 新しく覚えた曲はまず原キーから。リズムとメロディを覚えてからキーを変える。
 
 一定のテンションで高いピッチが出るのは良いことだけど、別にキーを下げてその分テンションを抑えられるようにしてもいい。
+
+まず原キーで歌えるようになってからキーを変えるのが基本。キーはメロディというよりテクスチャの段階。
