--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -6,6 +6,12 @@
 - バクステ, {通常投げ}, 2MP: シミー
 - ガード: 様子見
 
+2Fの場合はMPが4F技と相打ちして2MPが入る。
+
+## 7-8F
+
+- MP(+2): ヒットすると4HPが繋がる、2LPに割り込めない、MPや2MPに無敵技以外で割り込めない
+
 ## HP-HK: 39
 
 - DR 6LK: 下段、目押し
@@ -284,6 +290,9 @@ MP, MP, LPなど遠目で当たると(+1)になる。
   - {ガード}, 2LP, LP, 弱ショット: -6で大足の外
   - {ガード}, 通常投げ: 4F遅れ
   - {ガード}, 後退: シミー
+- 弱ショット: ガードで+7
+- OD上ショット: ガードで+11、0.8本削り
+  - 中ショット, {前方ジャンプ}, 中アッパー
 
 演出が入って中央でも端でも同じ状況になるので攻めやすい。
 前投げ/後投げのその場受け身より少し遠いくらい。
@@ -349,6 +358,9 @@ DIがギリギリ届かない。
     - {ガード}, 弱ショット: ジャンプできない
     - {ガード}, 中ショット, 強ショット: ジャンプできない、ジャンプすると繋がる
   - {後方受け身}: ジャンプできない
+- {端}
+  - MK: +8
+    - 後退: シミー
 
 ラッシュ投げが後方受け身に届かない。起き攻めは中の方が強い。
 
