--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -10,7 +10,7 @@
 
 ## 7-8F
 
-- MP(+2): ヒットすると4HPが繋がる、2LPに割り込めない、MPや2MPに無敵技以外で割り込めない
+- MP(+2): ヒットすると4HPが繋がる、2LPが連続ガード、MPや2MPに無敵技以外で割り込めない
 
 ## HP-HK: 39
 
