--- a/shared/thinking/連想.md
+++ b/shared/thinking/連想.md
@@ -48,3 +48,5 @@
 「犬猫にチョコは毒になる」のような知識を連想したり、
 「薬」「癒し」のような対立を連想したり、
 「病」「事故」のような類似を連想したりする。
+
+「田舎のヤンキー」と言えば「コンビニの前で屯する」という連想だけでなく、「屯する」と言えば「田舎のヤンキー」といった逆引きでも連想できると幅が広がる。
