--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -81,6 +81,12 @@
 
 ステップ, 中ショットが重なりやすいけど、有利すぎると重ならないし、後方受け身にも完全には重ならない。
 
+## {端} DR 4HP, 中マイト: 23
+
+- DI
+
+ダブルアップ。
+
 ## 6HK(g): 4
 
 - 2MP, 中ネクサス
