--- a/games/Street-Fighter/Six/practice/スト6のコマンド入力.md
+++ b/games/Street-Fighter/Six/practice/スト6のコマンド入力.md
@@ -6,6 +6,8 @@
 
 振り向き昇竜はまず普通に昇竜を入力してから、相手が裏に抜けるまで引きつけて逆側の斜め下に入れてボタンを押す。6231のような入力。
 
+途中で立つとジャンプ攻撃に当たりやすいので、Nを経由せず、しゃがんだまま出せるように練習する。
+
 ## 波動コマンド
 
 前歩きした後は昇竜に化けやすい。
