--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -255,19 +255,14 @@ MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
 - {中央} 中ショット: その場受け身に重なる
   - {後方受け身, ガード}, 強ショット
   - {後方受け身, 前方ジャンプ}, 中アッパー: 対空が間に合う
-- {端} ステップ: +4
-- {端} 強ネクサス
+- {端}: ド密着
+  - ステップ: +4
+  - 2LK: +8
+    - 後退: シミー
 
-MP, MP, LP, 中アッパーのように遠めで当てると持続当てになって29Fになる。
-
-## 中アッパー(+1): 28
-
-- {端} ステップ: +5
-- {中央} 弱ショット
-  - {前方ジャンプ}, 強アッパー
-
-MP, MP, LPなど遠目で当たると(+1)になる。
-ただ、距離によっては29Fになることがあるので投げに行く場合は注意。
+MP, MP, LP, 中アッパーのように遠めで当てると持続当てになって28-29Fになる。
+投げに行く時は注意。
+あと中央だと持続当てになるくらいの距離は離れすぎて起き攻めしにくい。
 
 ## 強アッパー: 27
 
@@ -280,6 +275,13 @@ MP, MP, LPなど遠目で当たると(+1)になる。
     - 中ネクサス
   - ガード
 - 中ニー(+10): ガードされても+3で投げ間合いの外
+  - {ガード}
+    - 2LK, LP, 弱ニー: 立ちガードで密着五分、しゃがみで近距離+2
+      - {立ガード}
+        - 2LP, LP, 弱ショット: -6で大足の外
+      - {屈ガード}
+        - MP
+          - {ヒット}, LP, 中アッパー(+2)
 - {端} 中アッパーと同じ
 
 中アッパーよりも近くに落ちて、後方受け身にもラッシュ投げが届く。
