--- a/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
@@ -1,3 +1,8 @@
+## サガット（同キャラ）
+
+開幕中ニーをガードすると有利を取られるので、見てからインパクトで返すか、垂直を置く。
+ただし、垂直は6HKで落とされるとだるい。まぁ、相手も狙うのは難しいはずなので飛んでもいい。
+
 ## マリーザ
 
 OD上弾を重ねるとODスクトゥムも割れる。
