--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -9,6 +9,18 @@
 
 弾はそんなに強くないけど、要所で使うと効果が高い。ピーキーな性能。
 
+## 開幕
+
+- 後退: 様子見
+- 前進
+  - {垂直ジャンプ}, 6HK, DR 2MP-HP, 強ニー, J.HP: 落として詐欺飛び
+- 中ニー: しゃがみガードで密着+2、後退で近距離+3、垂直やインパクトのリスクがある
+  - {立ガード}, 2LP 2回, 弱ショット
+- 前J.HP, HK: とりあえず触る
+- DR 2MP-HP: とりあえず触る
+  - {ヒット}, ODノヴァ, 6HK, 中アッパー: 端で中アッパーまで届く
+  - {ガード}, 弱ネクサス, ...
+
 ## 差し合いの基本
 
 ステローやニーで触りにいって、嫌がったところに外から弾を当てたり2MPで差し返したりするのが基本。
