--- a/shared/choice/選択.md
+++ b/shared/choice/選択.md
@@ -33,3 +33,6 @@
 その場の正しい選択肢を選ぶことが長期的に見ると正しくない場合もある。
 
 選択と判断の違いとして、選択には無作為の選択も含まれる。
+
+別にいつも最善を選ばなければならないわけでもない。
+選択肢のいくつかは危ない道だったとしても、大抵は遠回りだったり行き止まりだったりするだけで悪くもない道が多い。
