--- a/shared/love/好み.md
+++ b/shared/love/好み.md
@@ -6,3 +6,8 @@
 「好きか、そうでないか」や「嫌いか、そうでないか」で見る人もいる。
 
 どんな好みがあるか。
+
+「ただ理由の言語化にどれほど意味があるのは分からない。なぜなら－－」
+「同じ理由でも好きな理由にも嫌いな理由にもなるから…？」
+「－－察しがいいじゃないか」
+『亜人ちゃんは語りたい』
