--- a/shared/music/vocal/training/tips/キーを変えて歌う.md
+++ b/shared/music/vocal/training/tips/キーを変えて歌う.md
@@ -74,3 +74,5 @@ https://note.com/atano/n/n3c01c44d8bae
 一定のテンションで高いピッチが出るのは良いことだけど、別にキーを下げてその分テンションを抑えられるようにしてもいい。
 
 まず原キーで歌えるようになってからキーを変えるのが基本。キーはメロディというよりテクスチャの段階。
+
+キーは音程よりもテンションに合わせる。自分のテンションが原曲のテンションと合うようにする。
