--- a/shared/decision/information/tips/マスコミを信じない.md
+++ b/shared/decision/information/tips/マスコミを信じない.md
@@ -2,3 +2,9 @@
 選挙前には自民党の裏金問題をこき下ろして、選挙後には大きく躍進した国民民主党の話題で視聴率を稼ぎたいだけ。内容はなんでもいいのだ。
 
 オールドメディアが悪いとするなら、それも政治が悪い。情報の質が低いならチャンネルを増やせばいい。日本は特にテレビのチャンネルが少なすぎる。
+
+> ・政府が信用できない→まぁわかる
+> ・メディアが信用できない→まぁわかる
+> ・だから何処の馬の骨かわからないネットのデマインフルエンサーの情報に飛びつく→最も悪いのは政府やメディアじゃなくてお前の頭
+>
+> https://x.com/chang_now/status/1960489676500033787?s=46
