--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -179,3 +179,6 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 守りに回っても簡単に崩されないなら、相手に攻められても無理しなくていい。ただ、反射神経が悪いとある程度割り切ってこちらのペースに持っていくしかない。読みで対処する。
 
 スト6は発生が遅くてガード後の状況がいい技にはジャストパリィやインパクトを合わせるのが基本。
+
+弾はパリィしたいけど、そちらに意識を割くとラッシュやジャンプが止められなくなったりする。
+無理してパリィしなくていい。
