--- a/shared/life/死.md
+++ b/shared/life/死.md
@@ -31,3 +31,7 @@ https://x.com/badassceo/status/1111934061788852224
 全ての生物は死に向かっている。絶望が先にある。だが、それがどうした？当たり前のことだ。
 
 死にたがりにとって死は希望。つまり、絶望のように見えても希望。死があるからといって絶望しかないわけではない。
+
+どうせそのうち死ぬのに「死にたい」と考えるのは無駄でしかない。
+
+「死にたい」は「死にそう」の錯誤でしかない。
