--- a/games/Street-Fighter/Six/practice/守りの練習メニュー.md
+++ b/games/Street-Fighter/Six/practice/守りの練習メニュー.md
@@ -2,19 +2,18 @@
 
 以下をレコーディングする。
 
-- 短い前後移動
-- 長い前進
-- ラッシュ攻撃: できれば止めて、最低でもガードする
-- ジャンプ攻撃: できれば落として、最低でもガードする
-- 飛び道具: できればジャスパして、最低でもガードする
-- インパクト: できれば返して、最低でもガードする
+1. 前進: 5Fくらい (重さ4)
+2. 後退: 5Fくらい (重さ3)
+3. 飛び道具: できればジャスパして、最低でもガードする (重さ3)
+4. ジャンプ攻撃: できれば落として、最低でもガードする (重さ3)
+5. ラッシュ攻撃: できれば止めて、最低でもガードする (重さ3)
+6. インパクト: できれば返して、最低でもガードする (重さ1)
 
 https://youtu.be/pRL-TWPgoSA?si=J9X8tH1P6iKqgnws
 
 まずは止めることだけ考えて、余裕が出てきたらコンボで伸ばす。
 
-初めはラッシュ攻撃と飛び道具だけで始めてもいい。
-特にインパクトは後でもいい。
+まずはジャンプ攻撃まで有効にして、慣れてきたらラッシュやインパクトを増やしていく。
 全部ONにしても基本的には一つか二つくらいに絞って対処するのが大事。基本はラッシュ攻撃とジャンプ攻撃。それ以外はガードすることだけ気をつける。
 
 ## ガード
