--- a/shared/human/body/nerve/脳.md
+++ b/shared/human/body/nerve/脳.md
@@ -1,4 +1,4 @@
-Brain
+# Brain
 
 脳は神経系の一部で、中核。
 
@@ -13,3 +13,5 @@ https://wired.jp/2013/08/08/memories-of-planaria/
 理解や分析において取捨選択されるからか？
 
 老人が目も耳も悪くしてぼーっとする時間も増えてボケていくのを見ると、ある程度負荷をかけて脳が疲れている状態とはっきり仮眠して回復するのを繰り返した方がぼーっとするよりマシな気がする。刺激が必要。刺激を断つならきっちり寝る。
+
+ある程度ストレスがないと脳が衰えてしまう。ただ、もともと体が弱かったりするとそもそもストレスがある状態なので、それ以上必要ない。過度なストレスもまた脳を衰えさせる。
