--- a/games/Street-Fighter/Six/characters/Sagat/サガットの差し合いの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの差し合いの選択肢.md
@@ -1,15 +1,31 @@
 ## 2MP
 
 - 2MP, 中ネクサス
+- {先端ガード}
+  - 弱ニー(+6): ガードされても-2
+  - 中ショット
+    - {ガード}
+      - 弱ニー(+8)
+  - 弱ショット: 連続ガード、先端なら-5で大足の外
+
+隙が小さいので、中足で差し返されない距離なら空振りしてもいい。
 
 ## 2HP
 
-- 2HP(h)
-  - CR 6HK
-- 2HP(g)
-  - 強ネクサス: 9F遅れ、短い技を潰す
-  - ODネクサス: 4F遅れ、遅い技を潰す
-  - 弱ショット: 連続ガード、先端なら-5くらいで大足の外
+- {ヒット}
+  - ODネクサス: ガードでも4F遅れ、遅い技を潰す
+- {近ガード}
+  - 中ネクサス: 先端だと届かない
+- {遠ガード}
+  - 弱ニー(+6): 立ちガードされても五分
+  - 中ショット
+    - {ガード}
+      - 強ショット: ジャンプできない
+  - 弱ショット: 連続ガード、先端なら-4で弱ニーの外
+  - 強ネクサス: 9F遅れ、短い技を潰して当たる
+
+先端当てを狙って、当たったらワンパンヒット確認したい。
+遠距離で入れ込みの場合は強/ODネクサスだけど、そもそも空振りしたくない。
 
 ## MK
 
