--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
@@ -59,6 +59,12 @@ BO中は特にOD上ショットを削りで使っていくのが大事。
 
 サガットはコンボより削り優先でもいいかも。
 
+## 投げ抜けの後
+
+- 後退
+  - {前方ジャンプ}
+    - 6HK, DR 2MP-HP, 強ニー
+
 ## シミー
 
 - バクステ, 2MP: 30Fぴったり
