--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -33,6 +33,15 @@
 - 強ニー(+9): ガードされて+4、端かその場受け身には投げ間合い
 - {端} 2LP, 中ショット(+8): 最速しゃがみ攻撃暴れには負ける
 
+## {空} HK, 中ショット
+
+- {ガード}
+  - DR 2MP-HP: 目押しで埋まる
+  - 弱ショット: ジャンプできない
+
+遠目で着地に重なる。
+近すぎると着地前にショットが通り過ぎるので注意。
+
 ## {空} DR 2MP-HP, 強アッパー: 28
 
 - DR 6LK: 下段
@@ -518,7 +527,11 @@ SA2-2やSA3も状況がいい。
 
 ## ノヴァ(g): 2
 
-- MP, LP, 中アッパー(+1)
+- MP
+  - {ヒット}, LP, 中アッパー(+1)
+  - {ガード}
+    - LP, 中ショット: しゃがみに当たらない
+    - LP, 弱ショット: -6で大足の外、インパクトを返せない
 - 前投げ
 - 後退: シミー
 
