--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -47,7 +47,7 @@
 
 ラッシュやSAが漏れないように練習する。
 
-### 端の攻め
+### 端の攻め (Cのみ)
 
 - MP(h), MP, LP, 中アッパー
   - ステップ
@@ -218,6 +218,13 @@
 
 - 6HK(pc), 6HK, 2MP-HK, SA1
 - 6HK(pc), 6HK, 2MP-HK, SA2
+
+### 投げの対空
+
+- 通常投げ
+  - {前方ジャンプ}, 弱アッパー
+  - {垂直ジャンプ}, 弱アッパー
+  - {投げ抜け},
 
 ### メモ
 
