--- a/games/Street-Fighter/Six/practice/守りの練習メニュー.md
+++ b/games/Street-Fighter/Six/practice/守りの練習メニュー.md
@@ -1,12 +1,13 @@
 ## 総合
 
 以下をレコーディングする。
+足の速い豪鬼がおすすめ。
 
-1. 前進: 5Fくらい (重さ4)
-2. 後退: 5Fくらい (重さ3)
-3. 飛び道具: できればジャスパして、最低でもガードする (重さ3)
-4. ジャンプ攻撃: できれば落として、最低でもガードする (重さ3)
-5. ラッシュ攻撃: できれば止めて、最低でもガードする (重さ3)
+1. 前進: 5Fくらい (重さ5)
+2. 後退: 5Fくらい (重さ4)
+3. 飛び道具: できればジャスパして、最低でもガードする (重さ5)
+4. ジャンプ攻撃: できれば落として、最低でもガードする (重さ5)
+5. ラッシュ攻撃: できれば止めて、最低でもガードする (重さ5)
 6. インパクト: できれば返して、最低でもガードする (重さ1)
 
 https://youtu.be/pRL-TWPgoSA?si=J9X8tH1P6iKqgnws
