--- a/shared/decision/知性.md
+++ b/shared/decision/知性.md
@@ -47,3 +47,7 @@ learning, thinking, training あたりは知性の関連だと思う。
 「日本が感染数トップ」みたいな煽りが書かれていても、「じゃあ何人なの？」と考えるのが知性。
 
 「藤井聡太が100敗する前に500勝する！？」みたいな記事を見て、全部で600戦なのを考えたり5/6勝ってるのを考えたりするのが数学的な思考。語られていない部分を考える。
+
+> バカにでもわかるような例え話をすると、例え話から戻って来られないのが本物である。（木賃ふくよし）
+>
+> https://x.com/wb_opus_1/status/1394270415065731078?s=61
