--- a/shared/care/情.md
+++ b/shared/care/情.md
@@ -71,3 +71,10 @@ careというのは、対象を失わせないための技術。
 情を拒むのは良くない。福祉を手放さない。
 
 内側に向かう、あるいは内側から与えられるHealthと、外側に向かう、あるいは外側から与えられるWealthがある。
+
+情に厚い人は同時に人間関係が狭くなりがち。情はコストが高い。身内には情が厚くても、外には攻撃的な人もよくいる。
+
+Mercy、情、情け、赦し、恵み。
+
+責めない。
+情や慈愛、相手を可哀想と思う心は、どちらかというと敬愛に近い。
