--- a/shared/collaboration/organization/属人性.md
+++ b/shared/collaboration/organization/属人性.md
@@ -7,3 +7,5 @@
 
 組織の中で「この人にしかできない」と思われると、実はそこまででもない仕事でも、試金石として一旦送られてくることがある。他の人に任せてから困って回すより効率的だから。
 ただ、忙しくなるとそういう仕事は差し戻すなり他の人に流すなりしないといけない。
+
+属人化の解消はマネージャー側の都合なので、プレイヤーに協力してもらおうとしてもうまくいかない。専用の部署を作って置き換えを仕事にするか、自分でやるしかない。
