--- a/shared/training/routine/習慣.md
+++ b/shared/training/routine/習慣.md
@@ -79,3 +79,5 @@ Practice
 
 ランニングなんかは朝まったりして「よし、行くか」と重い腰を上げるようでは続かない。習慣になってない。
 起きてから流れ作業でモーニングルーティンや準備を済ませて、考える暇もなく出かけるくらいでないといけない。
+
+習慣はそれを外れると「気持ち悪い」と思うものだが、習慣が足を引っ張って感覚を更新できなくなることもあるので一長一短。
