--- a/games/Street-Fighter/コマンド入力.md
+++ b/games/Street-Fighter/コマンド入力.md
@@ -1,5 +1,15 @@
+## 共通
+
 コマンド入力にひとつ1Fはかかるけど、実際は3-5Fかかることもある。
-下下とか同じボタンを押すと特に長くなる。
+下下とか同じボタンを押すとNを挟むので特に長くなる。
+
+## 昇竜
+
+パッドの昇竜は特に下が抜けやすい。横、下、斜め、でなく、横、斜め、になりやすい。下を強く意識して入力しよう。
+
+斜めまで入れるというよりは、前、下をどれだけ早く入力できるか。前、下が綺麗に入れば、あとは斜めとボタンを同時に押すだけ。
+
+## 波動
 
 波動コマンドが出ない時は、次のような視点で入力を確認しよう。
 
@@ -8,6 +18,6 @@
 - 入力が早くないか（斜め入力でボタンを押していないか）
 - 入力が遅くないか（横入力から10F以上遅れてボタンを押していないか）
 
-パッドの昇竜は下が抜けやすい。横、下、斜め、でなく、横、斜め、になりやすい。下を強く意識して入力しよう。
+## メモ
 
 左波動が苦手なら、左昇竜も左斜め下、下を波動拳のようにスライド入力して、そのまま斜めに戻すのが入力しやすい。左、下、左斜め下、だと左波動と似たような入力になるので合わない。逆も然り。
