--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -190,3 +190,6 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 腹から声を出すと喉を下げて低い位置で息を受け止めたほうが自然で楽。
 
 喉を下げて声を出す前に、喉を広げても腹から強い息を吐けるようにしないといけない。
+
+喉は首の力で下げる。顎や舌の力で下げると欠伸みたいなこもった声になる。
+喉を広げて、でも喉に力は入れない。喉を狭くする要因を排除する。
