--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -260,3 +260,6 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 声帯で声を出して強すぎるとしても、練習段階では別にいい。最終的にはもっと深いところで鳴らして柔らかく深い声にするのと、響きを良くしていく。抜いて声を出すのはもっと後。
 
 声の基本は呼吸と声帯だけど、美しい声のためには声道の形を変えたりして音の響きを追求していく。
+
+声は息に載せるだけ。
+特に、息が十全でないのに喉で絞って強くしてはいけない。
