--- a/shared/voice/training/tips/高い声を出す.md
+++ b/shared/voice/training/tips/高い声を出す.md
@@ -55,3 +55,6 @@
 
 高い声が出ない時はまず発音を無視して全部声の出しやすい音でメロディを追ってみる。「あー」でもいいし、「ooh」でもいい。
 例えば日本語の「い」とかは発音しにくいので、まずは発音しやすい音で出して、発音できる音を「い」に近づける。
+
+高い声を出しても息が漏れない、裏返らないのがまずは基本。
+息を漏らすなら意識的に。声の高さと連動させないで切り分ける。
