--- a/study/physics/sound/音.md
+++ b/study/physics/sound/音.md
@@ -5,8 +5,11 @@
 複数の波が重なって音色になる。
 
 物理現象としての面と、人間が聞いた印象としての面がある。
+物理的な音と音楽的な音。
 
 温度による影響がある。
 気温が低いほど音速は遅くなり、高いほど速くなる。
 
 音は強さ高さ長さ重なりで最低でも4次元ある。
+
+音楽的な音は基本的に和音。
