--- a/shared/documentation/tips/ナレッジの整理.md
+++ b/shared/documentation/tips/ナレッジの整理.md
@@ -75,3 +75,5 @@ explanationは、原則としてどうするか、なぜそうするか、どの
 全ての知識の中から特定の知識を取り出せるようにするのは、図書館のようにラベルをつけて、上から辿っていけるようにするといい。数学の、解析学の、微分の、みたいに上から辿っていく。
 
 記事が小さすぎるなら用語とかは一つの記事でもいいかも。
+
+ナレッジとまとめるときにどういうトピックがあるか、どの単位で記事にするかは重要。見出しをよく考える。
