--- a/shared/thinking/tips/思考に慣れる.md
+++ b/shared/thinking/tips/思考に慣れる.md
@@ -2,3 +2,4 @@
 できるだけ大きな紙に手書きが一番便利。A4あれば十分だけど、もっと大きくてもいい。
 習慣にするために、毎日決まったタイミングで、最低5分とか10分とか決めて進めるといい。
 慣れてきたら10分あればA4の紙が埋まるけど、もっと続けたっていい。まずは始めることが大事。
+ノートは思考だけじゃなくて記述する訓練でもある。
