--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -134,6 +134,14 @@
 HKには対空無敵がある。
 遠めならHK(2), 中ショットで無敵技でも-7くらいなので、ほぼ安定。
 
+## 弾抜け
+
+ニーは弾抜けにも使えるけど、狙うのは難しい。姿勢で抜ける。ニーを出した時に相手が弾を撃っていたらたまたま抜けられるくらい。
+
+SAを弾抜けに使うならSA3よりSA2の方が少し長い。
+
+SA1は発生が遅いので、相殺を狙っても負けがち。
+
 ## 守り
 
 ステローとニーの距離が動きやすい。
