--- a/shared/art/模倣する.md
+++ b/shared/art/模倣する.md
@@ -17,3 +17,14 @@
 他人の真似にならないように作品のインスピレーションを得るには自然を真似するしかない。
 
 オマージュには愛や敬意が必要。
+
+最初は真似から入っても、真似できないことはある。そこで自分に合わせた工夫が必要。
+
+表面だけを真似るのではなく、その裏にある理論を真似る、あるいは独自の理論を構築する。
+ピカソをただ真似ているだけでは面白くない。キュビズムの背後にあるその人独自の論理を実現してあると面白い。
+
+技術を身につけるために真似するなら癖のある人よりも標準的な方法を真似する。
+
+脳や体などのハードウェアが優れた人をただ真似してもうまくいかない。
+簡単に真似できるのはソフトウェアの部分。そして、ソフトウェアの部分もハードウェアの性能ありきで作られていると、真似しても効果が出ない。
+重要なのはこの見極め。まず、その人のパフォーマンスがハード由来なのかソフト由来なのか見極めて、ソフト由来であっても自分のハードに合っていなければ別の方法を探さないといけない。
