--- a/shared/knowledge/概念.md
+++ b/shared/knowledge/概念.md
@@ -21,3 +21,6 @@ https://www.weblio.jp/content/%E6%A6%82%E5%BF%B5#:~:text=%E3%80%8C%E6%A6%82%E5%B
 違うからこそどう思っているのか聞いて、自分がどう思うのか伝えることで見識が広がる。
 
 一つの核から派生していくというよりは、いくつかの核になる概念が組み合わさって一つの複雑な概念を形成する。
+
+赤を知らない者に赤を説明することはできないが、赤を知っていればわざわざ根拠を並べなくても見ればわかる。
+百聞は一見にしかず。
