--- a/shared/breath/training/tips/息を強くする.md
+++ b/shared/breath/training/tips/息を強くする.md
@@ -246,3 +246,5 @@ https://youtube.com/shorts/nwktMJI_rU8?si=XAGRbGhLYMHG6sJU
 強い息を一瞬しか維持できないと、喉で絞るしかない。
 
 息の圧を高めるときは息を止める感覚。それだけで声は出ない。息の圧を高めた上で、腹筋で少しだけ息を送る。
+
+息を強く吐くときでも表面の腹筋は硬くしない。内側だけ。
