--- a/shared/community/謝罪.md
+++ b/shared/community/謝罪.md
@@ -14,3 +14,5 @@
 謝罪というのは「償いを受け入れる」ものであるべき。被害者が償いを提示して、その償いを実施する。謝っても償わないなら許すべきではない。
 
 謝罪を求める場合は贖罪も考えておく。どのように償ったら許すか、のラインを明らかにする。そうでないなら謝らせる意味もない。
+
+謝罪は贖罪の交渉である。謝罪しても罪が許されるとは限らない。
