--- a/shared/music/vocal/training/tips/曲を覚える.md
+++ b/shared/music/vocal/training/tips/曲を覚える.md
@@ -116,3 +116,5 @@
 おふざけみたいな曲ほど仕上げておかないと格好がつかない。
 
 まずは息を十分確保できるくらいゆっくり歌ってリズムとメロディを取る。速く歌うとブレスが問題になるので、ゆっくりしたテンポから上げながら調整する。
+
+まずは原キーで覚えて、高音や低音が出なかったらオクターブで上げ下げする。原曲とテンションが違っても後回し。
