--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -263,3 +263,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 
 声は息に載せるだけ。
 特に、息が十全でないのに喉で絞って強くしてはいけない。
+
+中音のロングトーンでも声が裏返るならまずは呼吸と声帯を安定させないといけない。特に終わりぎわに息が抜けないように、クレッシェンドして吐き切ってから力を抜いて息を吐く練習。
