--- a/shared/science/科学.md
+++ b/shared/science/科学.md
@@ -63,3 +63,5 @@ mental 心理的
 「なぜ？」を追求するのが科学的姿勢だけど、知識もない人がろくに検証もせずに考えても神話にしかならない。野生の思考。
 
 まず、科学は何かを解決するものではない。再現するもの。
+
+科学的な手法を選ぶかどうかというのは、バンジージャンプで10000人に1人が死亡していると公表している会社と、谷底は真っ暗で見えないけど下にクッションがあるので大丈夫、確認はしてないけど、って言ってる会社のどちらを選ぶかという問題。ちゃんと結果に責任を持っているかどうか。
