--- a/study/politics/正義.md
+++ b/study/politics/正義.md
@@ -27,3 +27,5 @@
 暴力を承認する人間には正義がない。悪人への優しさは単に自分だけが暴力から逃げるための無関心でしかない。
 
 最後まで戦えば、殺されても尊厳は守られる。正義を示し、凌辱を許さない。
+
+正義は暴力を止めるための暴力であって、権力になってはいけない。正義に権力を与えることには正義がない。正義を持たない人たちが誰かの正義に丸投げして権力を与える。
