--- a/shared/music/theory/rhythm/リズム.md
+++ b/shared/music/theory/rhythm/リズム.md
@@ -77,3 +77,14 @@ https://youtube.com/watch?v=SsyijRvm7Qo&si=KBYmrf4gJKDeNvXK
 https://youtube.com/shorts/yS5BJeNc4Ag?si=bdOxnJITuJUFaPbD
 
 リズムの基本は韻を踏むというか、同じパターンを繰り返すこと。アクセントのタイミングや発音なんかを近づけた方がいい。
+
+72bpmと144bpmは違う。
+
+4/4, 3/4, 6/8あたりがよくある。
+まずはこの三つに慣れるといい。
+
+4/4の中でも8ビートや16ビート、シャッフルなど、リズムの取り方でまた違う。
+
+テンポが速くなるほど合わせるのは難しい。
+
+音楽はリズムが9割。
