--- a/shared/music/vocal/training/歌の表現.md
+++ b/shared/music/vocal/training/歌の表現.md
@@ -1,3 +1,11 @@
 声楽的には高い音を強調するというか、地声で高い音も出すのが基本。
 
 フレーズの終わりは力を抜いて息を抜くのか、声帯を閉じるのか、そのままゆっくり吐き切るのか、とか。息の使い方だけでもさまざまな表現がある。
+
+高い声にも色々ある。
+
+- 喉が締まった苦しい高音
+- 怒りで力が入った高音
+- 息が漏れた細い高音
+
+ピッチが変わるのは基本的に息が強くなるか、声帯が伸びるか、声帯が硬い時。感情と対応している。
