--- a/shared/music/vocal/歌声.md
+++ b/shared/music/vocal/歌声.md
@@ -20,3 +20,8 @@
 
 まだ声の段階でうまくいってないなら、歌がどうとかのレベルじゃない。
 ただ、リズムはすぐ改善するところなのでやっといてもいい。メロディはピッチが出ないとどうしようもないし、声が良かったらなんとかなる。
+
+音楽的には声はハーモニーの部分。良い声は良い和音。
+
+基本はまず綺麗な倍音。
+高い倍音が含まれていて、非整数次倍音が少ない。
