--- a/shared/music/音楽.md
+++ b/shared/music/音楽.md
@@ -41,3 +41,6 @@ https://youtu.be/69b0XDX6Mi0?si=SWd-QIton1VpDiHd
 
 芸術家は「目より先に手が肥えることはない」という。
 同様に音楽家も「耳より先に声が肥えることはない」と考えるべき。
+
+メロディはあまり重要ではない。
+一つのピッチしか出ない太鼓だけでも音楽になる。
