--- a/shared/voice/training/tips/声を柔らかくする.md
+++ b/shared/voice/training/tips/声を柔らかくする.md
@@ -49,3 +49,7 @@ https://youtube.com/watch?v=bU1s_6IRkHg&si=PxXikenoXx3tjMBh
 
 喉に力を入れると声が硬くなりやすい。
 喉の力を抜いて、首や胸の筋肉で喉を下げて音程を変える。
+
+## メモ
+
+硬い声は響きの少ない声。倍音の少ない声。
