--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -182,3 +182,5 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 
 弾はパリィしたいけど、そちらに意識を割くとラッシュやジャンプが止められなくなったりする。
 無理してパリィしなくていい。
+
+相手がコパン中足みたいな不利な連携をしてきた場合にこちらも中パンなどそこそこ発生の早い技を押しているのにカウンターで負けた場合、コパンをガードしてから最速で押せてない。単に反応できてない場合もあるし、ガード硬直が切れるタイミングを捉えられてない場合もあるし、ラグの場合もある。
