--- a/shared/society/礼儀.md
+++ b/shared/society/礼儀.md
@@ -8,3 +8,7 @@
 
 勝手に妄想で不快になる人のことまでは考えても仕方ない。
 そういうのは切り捨てた方が効率的。
+
+他人の振る舞いを見て自らを戒めるための蔑視は善い行動を続けるために善いことだが、誰かを害する方に向いてしまうと敵を作ってしまう。殺せない敵を作ってはいけない。
+
+悪い行動を取る人を「カス人間」として括り出して、自分をまともな方に置くことで誇りによって善い行動を維持できる。
