--- a/shared/trust/creditability/貸し借り.md
+++ b/shared/trust/creditability/貸し借り.md
@@ -11,3 +11,9 @@
 貸し借りの実績が信用につながる。
 
 信用というのは、結局貸し借りのための考え方。
+
+誰かとの貸し借りに脳のリソースを割くのは無駄なので、普段から多めに恩を売っておく。大きな貸し借りは避ける。
+
+貸し借りに関係なく多めに恩を売っておくのが無難。普段から恩を売っておけば、相手の恩を覚えていなくてもいい。
+
+人間は記憶力がいいので、過去のやり取りを貸し借りとして覚えて、恩や恨みとして持つ。いつまで持っているかは人による。
