--- a/shared/war/敵を作らない.md
+++ b/shared/war/敵を作らない.md
@@ -23,3 +23,8 @@
 人に嫌われるのはいいけど、恨まれるのはまずい。
 人に嫌われるということは、相手が離れていくということ。これはどうでもいい。よくある。
 しかし、人に恨まれるということは、相手が積極的にこちらを殺しにくる、害しにくるということ。
+
+敵を作っていいのは殺せるときだけ。
+ただ、相手が勝手に敵になったら手遅れなので殺すか逃げるしかない。
+
+自分から敵を作って逃げるのは意味がわからない。それなら初めから敵を作るべきではない。
