--- a/study/politics/政治的な立場.md
+++ b/study/politics/政治的な立場.md
@@ -8,3 +8,8 @@
 ## 経済
 
 - 緊縮財政 ⇔ 積極財政
+
+## メモ
+
+政治的には、態度や立場を決めていない人は現行の主流に従うものと考えるべき。
+例えば今の自公維政権は移民推進なので、「移民に賛成か反対か」と聞かれた場合に「どちらとも言えない」と答える人は移民推進派と考えられる。あなたが移民反対派なら潰さないといけない。
