--- a/shared/engagement/エンゲージメント.md
+++ b/shared/engagement/エンゲージメント.md
@@ -327,3 +327,5 @@ engagementはcommunicationや trustと関わりが深い。
 先に借りがあるから相手のために何かする、というのはコミュニティとは違うけど、エンゲージメントではある。
 
 お祭りや仕事などに嫌々参加して「手伝ってやってる」と感じているとエンゲージメントは低い。エンゲージメントのためには、主催者側も参加者が誇りを持てるような価値を示さないといけない。
+
+「馬鹿ども」とか「韓国人」とか、いろんなものをグループとして括り出すと、自分をそこから排除してしまう。認知上の所属が減る。
