--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -780,3 +780,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 まずは少しでも収入を作って、事業継続の足しにするのが大事。でもいずれは黒字にしないといけない。
 
 人と関わるのが嫌いだとビジネスは厳しい。
+
+趣味や経歴、出身などの情報を仕事の自己紹介でも伝える。
