--- a/shared/government/democracy/政党.md
+++ b/shared/government/democracy/政党.md
@@ -14,3 +14,5 @@
 
 参政党の「日本人ファースト」が躍進したのは、与党、というか立憲なども含めた既存政党がそれすらできてないと思われてるから。
 まぁ、そもそも立憲や共産みたいなリベラルは誰の味方でもないコウモリだし、自公は米中の犬だし。
+
+参政党とかれいわとか、さすがに支持してるだけでも恥ずかしいから隠しといてほしい。
