--- a/shared/sports/スポーツ.md
+++ b/shared/sports/スポーツ.md
@@ -15,3 +15,5 @@
 体を動かすものがスポーツとは限らない。元は遊びや気晴らしのためのゲームのこと。
 
 パワー、スピード、テクニックが基礎。メンタルは考えない。
+
+スポーツ選手やゲーマーで食っていくなら、ストリーマーのような芸人ルートとプロリーグに参加するような超人ルートと周辺の支援職に収まる凡人ルートがある。
