--- a/shared/trust/intimacy/自己紹介.md
+++ b/shared/trust/intimacy/自己紹介.md
@@ -45,3 +45,5 @@ https://studio250.jp/menu/profile/
 
 わざわざ自己紹介するなら、まずはメジャーなこと、周りと共通しやすいことから伝える。
 周りの人の層に合わせると尚いい。カラオケだったら音楽の話題とか。
+
+自己紹介では、「この人ともっと話してみたい」と思わせる、次の関係性への布石が必要。
