--- a/shared/decision/知性.md
+++ b/shared/decision/知性.md
@@ -51,3 +51,5 @@ learning, thinking, training あたりは知性の関連だと思う。
 > バカにでもわかるような例え話をすると、例え話から戻って来られないのが本物である。（木賃ふくよし）
 >
 > https://x.com/wb_opus_1/status/1394270415065731078?s=61
+
+「馬鹿って話長いよね」（夢野あかり）
