--- a/shared/learning/tips/反省.md
+++ b/shared/learning/tips/反省.md
@@ -2,3 +2,5 @@
 
 出力を変えるための処理を変えないと、出力は変わらない。失敗したら処理を見直すのが反省。
 出力が変わらないなら反省したとは言えない。
+
+悪いところを見つけるなら、どうしたら良くなるか、まで考えて実践できないと役に立たない。できないならそもそも悪いところが見えない方が幸せになれる。
