--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -338,3 +338,6 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 ただ、練習の質が高くても、その行動自体がぬるいとぬるい行動に慣れるだけ。まず学習が必要。
 
 慣れたことを繰り返していても練習にならない。より複雑なこと、より負荷がかかること、やったことがないこと、を試さないといけない。
+
+練習しても上手くなるわけではない。上手くなるのは学習の時で、練習は同じ動作に慣れるだけ。
+努力しても上手くならないなら、根本的に間違っている部分がある。それを直さないと練習しても無駄。
