--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -269,18 +269,36 @@ MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
 ## 中アッパー: 27
 
 - DR 6LK
-- DR 6MP: 5F遅れ
-- {中央} 中ショット: その場受け身に重なる
-  - {後方受け身, ガード}, 強ショット
-  - {後方受け身, 前方ジャンプ}, 中アッパー: 対空が間に合う
+  - {中央|ガード}
+    - {後方受け身}, LP, 弱ショット: -7で中足の外
+    - {その場受け身}, 2LP, LP, 弱ショット: -7で大足の外
+- {中央}
+  - 中ショット: その場受け身に重なる
+    - {後方受け身, ガード}, 強ショット
+    - {後方受け身, 前方ジャンプ}, 中アッパー: 対空が間に合う
+  - 強ニー: 後方受け身には+2で投げ間合い、後退でも同じ、ジャンプできない、その場受け身で立ちガードは-5
 - {端}: ド密着
+  - DR 6MP: 5F遅れ
   - ステップ: +4
   - 2LK: +8
     - 後退: シミー
+  - 中ニー: ガードされても+3で投げ間合いの外
 
 MP, MP, LP, 中アッパーのように遠めで当てると持続当てになって28-29Fになる。
 投げに行く時は注意。
 あと中央だと持続当てになるくらいの距離は離れすぎて起き攻めしにくい。
+
+## 中アッパー(+2): 29
+
+- {中央}
+  - 弱ショット
+    - {その場受け身, ガード}, 強ショット
+      - {前方ジャンプ}, 中アッパー: ギリギリ間に合う
+    - {後方受け身, 前方ジャンプ}
+      - 6HK
+      - 強アッパー(+2)
+
+MP, MP, LP, 中アッパー(+2)など、遠目で当てると持続当てになる。
 
 ## 強アッパー: 27
 
