--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -20,23 +20,24 @@
 - MP(h)
   - LP, 中アッパー: 中央でも起き攻めしやすい
   - MP, LP, 中アッパー(+2): 端以外では離れすぎて起き攻めしづらい
-- MP(g): 投げ間合いの外
-  - LP, 弱ネクサス: 発生7F以上の技にカウンターしてノヴァが入る
-  - LP, 強ネクサス: 立ち小足や中パンなどに差し返し気味に当たってノヴァが入る
-  - 2LP: 無敵技以外で割り込めない
-    - 2MP: 短い技を潰す、ジャンプで避けられる
-      - {中央} 弱ショット: -7で大足の外、端では離れないので確反がある
-      - 中ネクサス: 無敵技以外で割り込めない
-      - 強ネクサス: 短い技を潰せる
-      - 弱ニー(+6): 立ちガードされて-2の投げ間合い
-      - {端} 2MP, ODニー: 弱攻撃を潰して、中攻撃以上は相打ち以上
-      - ガード: 差し返し狙い
-  - MP: 相打ちで2MPが繋がる
-    - {相打ち} 2MP
-    - {ガード} 2MP: 短い技を潰す、カウンターで繋がる
-    - {ガード} 後退(3-8F), 2MP, CR MP: 差し返し気味に当ててラッシュ
-    - {ガード} 後退(), 2HP, 強ネクサス: パニカンになると繋がる
-- MP(c), 4HP
+- MP(g)
+  - LP, 弱ショット: -7で中足の外
+  - LP, OD下ショット: -1で中足の外、インパクトを返せる
+  - LP, 弱ネクサス: 7F以上の技を潰すかジャンプに引っ掛かるとノヴァが繋がる
+  - LP, 強ネクサス: 立ち小足や中パンなどに差し返し気味に当たってノヴァが入る、ジャンプで避けられる
+  - 2LP, 2MP-HP: 短い技を潰してパニカン、ジャンプで避けられる、TCを出さなければインパクトを返せる
+    - 中ネクサス: 無敵技以外で割り込めない
+    - 強ネクサス: 短い技を潰せる
+    - 弱ニー(+6): 立ちガードされて-2の投げ間合い
+    - {端} 2MP, ODニー: 弱攻撃を潰して、中攻撃以上は相打ち以上
+    - ガード: 差し返し狙い
+  - MP, 2MP: 短い技や遅い技を潰してカウンターで繋がる
+    - 弱ニー: 立ちガードでも-2
+  - MP, 後退(3-4F)
+    - 2MP: 差し返し気味に当てる
+    - 2MP-HP(h), ODネクサス, ...
+    - 2MP-HP(g), 弱ネクサス, ...
+    - ガード
 
 相打ちになってもコンボになるので+2から重ねてもいい。
 
@@ -54,6 +55,7 @@ MP, MPに無敵技以外で割り込めない。
 ## MP(+2): 7-8
 
 ヒットすると4HPが繋がる。
+4HP, 強ニー, 弱アッパー(+2), 2MPで+8からループ。
 
 ## DR MP: 14-19
 
