--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -49,18 +49,25 @@
 
 ### 端の攻め (Cのみ)
 
-- MP(h), MP, LP, 中アッパー
+（ダウンリバーサル: 4F技/何もしない）
+
+- MP(c), 4HP, 強ニー, 弱アッパー
+  - 2MP
+    - MP(+3)(h), 4HP, ...
+    - MP(+3)(g), ...
+- MP(h), MP, LP, 中アッパー(+2)
   - ステップ
     - MP, ...
     - 前投げ: 1-4F遅らせないと空振りになる
-      - DR 2MK
 - MP(g): +2
+  - MP, 2MP
+    - {相打ち}, 強アッパー
+    - ガード
   - MP(c/相打ち), 2MP, CR MP, 4HP, 強ニー, 弱アッパー
     - 2MP: +8
       - MP(+2)(h), 4HP, 強ニー, 弱アッパー, ...
       - MP(+2)(g)
   - MP(h), 2MP
-  -
 
 ### ジャンプ攻撃のコンボ
 
@@ -211,6 +218,21 @@
     - MP, 2HP, 強ネクサス
   - 通常投げ: 少し遅らせる
   - 後退
+
+### キャンセルラッシュ 2
+
+（ダメージ復帰リバーサル: 4F技）
+
+- 2MP(h), CR 4HP, 中ノヴァ, 6HK, 強アッパー
+  - ステップ
+    - MP(c), 4HP, 強ニー, 弱アッパー, DR 6MP, ...
+    - MP(h), LP, 中アッパー, DR 6LK, ...
+    - MP(g), LP, 弱ショット, ガード
+- 2MP(g), CR 前投げ
+  - {何もしない}, 強ショット
+  - {垂直ジャンプ}, 弱アッパー
+  - {前方ジャンプ}, HK, 強ノヴァ, ...
+  - {後方ジャンプ}, HK, 中ショット
 
 ## その他
 
