--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -140,38 +140,37 @@ HK(1), 強ノヴァは相手が空中でも使える。
 - 2MP, 強ニー: 2000
 - 2MP, 中マイト: 1740
 - {端} 2MP, OD上ショット, 6HK, 中アッパー: 3000
+- 2MP, CR MP, 4HP, 強ニー, 弱アッパー: 2982 34F
+- 2MP, CR 4HP, 中ノヴァ, 6HK, 強アッパー: 2934
+- {端} 2MP, CR 4HP, 中ネクサス-(2F遅らせ)マイト, 4HP, 強アッパー-h: 3574
 - {端} 2MP, OD上ショット, DR 4HP, 強アッパーh: 3500
 - {端} 2MP, CR HK, 強ノヴァ, 4HP, 強アッパー-h: 3381
-- {端} 2MP, CR HK, 強ノヴァ, 4HP, 強アッパー-h: 3381
-- {端} 2MP, CR 4HP, 中ネクサス-(遅らせ)マイト, 4HP, 強アッパー-h: 3574
-- {端} 2MP, CR 4HP, 中ネクサス-(遅らせ)マイト, 4HP, 中ニー, 中アッパー: 3294
-- 2MP, CR 4HP, 中ノヴァ, 6HK, 強アッパー: 2934
+- {端} 2MP, CR 4HP, 中ネクサス-(2F遅らせ)マイト, 4HP, 中ニー, 中アッパー: 3294
+- {端} 2MP, CR 4HP, 中ノヴァ, 強ニー, 弱アッパー: 3054
+- {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強アッパー-h: 3402
+- {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強ニー, 中アッパー: 3225
 - 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h: 3465
+- {端} 2MP, CR MP, 4HP, (2-3F遅)中ショット, DR 4HP, 強アッパー-h: 3651
+- 2MP, CR MP, 4HP, 強ニー, ODアッパー: 3237
 - 2MP-HK, SA1: 3360
 - 2MP, OD上ショット, SA1: 3140
 - {端} 2MP, OD上ショット, 6HK, SA1: 3440
 - 2MP, CR HK, 強ノヴァ, 6HK, SA1: 3215
 - 2MP, CR HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA1: 3690
+- 2MP, CR MP, HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA1: 3719
 - 2MP-HK, SA2: 4000
 - 2MP, CR HK, 強ノヴァ, 6HK, SA2: 3755
-- 2MP, CR HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA2: 4230 (2:4110)
+- 2MP, CR MP, HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA2: 4259 (2:4139)
+- 2MP, 強アッパー, SA3: 5000
 - 2MP-HK, SA3: 4800
 - {端} 2MP, OD上ショット, 6HK, 中アッパー, SA3: 5000
-- 2MP, CR HK, 強ノヴァ, 強アッパー, SA3: 4849
-- 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5125
-
-ヒット確認できるならSA1/2はTCから直接の方が高い。
-
-## 2MP, CR MP
-
-- 2MP, CR MP, 4HP, 強ニー, 弱アッパー: 2982 34F
-- 2MP, CR MP, 4HP, 中ショット, DR 4HP, 強アッパー-h: 3651
-- 2MP, CR MP, 4HP, 強ニー, ODアッパー: 3237
-- 2MP, CR MP, HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA1: 3719
-- 2MP, CR MP, HK, CR 6HK, HK(1), 強ノヴァ, 6HK, SA2: 4259
 - 2MP, CR MP, 4HP, 強ニー, 弱アッパー, SA3: 4982
+- {端} 2MP, CR 4HP, 中ネクサス, 4HP, 強ニー, 中アッパー, SA3: 5225
+- 2MP, CR HK, 強ノヴァ, DR 4HP, 強アッパー-h, SA3: 5125
 - 2MP, CR MP, 4HP, 中ショット, DR 4HP, 強アッパー-h, SA3: 5231
 - 2MP, CR MP, HK, CR 6HK, 4HP, 強ニー, 弱アッパー, SA3: 5434
+
+ヒット確認できるならSA1/2はTCから直接の方が高い。
 
 ## 2MP(pc)
 
