--- a/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの相性.md
@@ -26,3 +26,7 @@ HPやMPに対して2MPやLKが差し返しやすい。
 表裏と着地に対しては2MPでもいい。表裏には2MP, 強ノヴァが入る。ラッシュ肘で3000ダメージ。
 MPと2MPは裏の場合でも表に落ちるので、追撃も表の入力でいい。
 また、後退と表にはHKが確定。後退にはHK, 強ニー、表にはHK, 強ノヴァ, 6HK, 中アッパーが入る。見てから判別するのは難しいが、強ニーは空振りでも+7、強ネクサスは+12なのでチャレンジしていい。判別できたら一番いい。基本的に後退狙いなので、入れ込むならニーの方。
+
+## ベガ
+
+ベガのダブニーはLP, 中ネクサスで切り返すのが基本だけど、遠かったら2MKとかでもいいっちゃいい。
