--- a/shared/life/survival/tips/沼から脱出する.md
+++ b/shared/life/survival/tips/沼から脱出する.md
@@ -5,10 +5,12 @@
 まずは片足を表面に出すのが先決。
 落ち着いて片足だけを出す。両足を一気に抜こうとしてバタバタするとなおさら沈んでしまう。
 
-片足を抜いたら手や片足を沼の上に広げて、表面積を広げて腰まで抜く。
+片足を抜いたら手や片足を沼の上に広げて、接地面積を広げて腰まで抜く。
 
 最後にもう一方の足を抜く。
 
 沼から出たらすぐに服を脱ぐ。砂が肌に当たって怪我をするのを防ぐ。
 
 https://youtu.be/zHNP0_gp-Sc?si=-XCrcfaEiUe6ryQx
+
+池とか登るところが滑るとこで落ちた時も土部分との接地面積を広げるのが大事。指より手のひら、手のひらより腕、腕より胸を地に着ける。
