--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -53,6 +53,9 @@
 基本的には中ニーが先端当てになり、中強ショットがコンボになる遠めの距離が強い。
 端では中強ショットの距離が近くなるので、中ニー先端当ての距離を維持する。
 
+ステローは強いけど、まずはドライブゲージを削る方が手っ取り早い。
+2MP、2HP、2MK、HP、LK、MK、ショット、ニーあたりをペチペチ当てる。特にLKや2MPで触れたら一番いい。
+
 ## 差し合いの距離
 
 初期位置から一歩踏み込んで、ステローの先端がちょうど当たるくらいが動きやすい。
@@ -100,6 +103,8 @@
 そもそも弱ニーと中ニーで有利を取れる距離があまり変わらないし、弱ニーは届かないと空振りになるし、近すぎると不利になりやすい。中ニーでいい。
 
 6LKは不利が大きいし発生も遅いので、2MKでいいところは2MKにするのが無難。
+
+2MKが結構守りに効いている。結構長くて、相手が触ろうとしてきたところに当てて止める。隙は大きいので牽制というよりは当てたい。リターンは少ないけど、時間稼ぎになる。
 
 ## 牽制の選択肢
 
