--- a/shared/business/ビジネス.md
+++ b/shared/business/ビジネス.md
@@ -782,3 +782,5 @@ https://journals.plos.org/complexsystems/article?id=10.1371/journal.pcsy.0000001
 人と関わるのが嫌いだとビジネスは厳しい。
 
 趣味や経歴、出身などの情報を仕事の自己紹介でも伝える。
+
+スト6のCFNで見れる対戦動画をYouTubeに上げるだけでも、スト6を起動してネットワークに接続する、動画を検索する、YouTubeの操作感で見れるようにする、といった労働を代替していて価値がある。
