--- a/shared/trust/creditability/信用.md
+++ b/shared/trust/creditability/信用.md
@@ -126,3 +126,5 @@
 
 > どん底に落ちたら、何も考えない。耳を塞いで頭も使わない。信用できる人間をただ頼りきればいい。
 > ただ、信用できる人間はその前に決めておかないといけない。どん底に落ちてから信用できる人間を探しても遅い。
+
+無能は信用できない。約束を守れないから無能。
