--- a/shared/war/tips/生かすか殺すか.md
+++ b/shared/war/tips/生かすか殺すか.md
@@ -1,3 +1,6 @@
 害があっても利があるならあえて生かすこともある。
 
 害があっても殺せないなら生かすしかない。
+
+もし殺すなら、殺せば代わりがいない話と殺しても代わりがいる話を区別して殺さないといけない。
+たとえば上司に個人的に目をつけられていてバレずに殺せば問題が解決するなら殺してもいいけど、組織構造の問題で上司が変わっても状況が変わらないならわざわざリスクを犯す必要がない。
