--- a/shared/engagement/誇り.md
+++ b/shared/engagement/誇り.md
@@ -98,3 +98,5 @@
 誇りを得るためにはまず勝たなければならない。まずは自分たちのやってきたことが正解だったと思える一勝が誇りにつながる。
 
 誇りを守るためには飾りも必要。たとえば会社のビルのロゴがボロボロだったり、給料が安かったりすると格好がつかない。ただ飾るというよりは、誇りを示す。
+
+人間はカスばっかりだと思っているならギブアンドテイクを意識することもないし社会へのエンゲージメントもない。
