--- a/shared/story/telling/物語.md
+++ b/shared/story/telling/物語.md
@@ -93,3 +93,5 @@ https://www.raitonoveru.jp/cms2/2019/06/25/44223/
 少しずつ開示していく。ワクワクさせる。
 
 物語には時間があるけど、語り手が時系列で語るとは限らない。
+
+設定に無理があるとそっちが気になって物語に集中できない。
